--- a/index.html
+++ b/index.html
@@ -38,6 +38,66 @@ th {
 <div id="drive">Loading data...</div>
 
 <script>
+// =============================
+// SAFE CSV PARSER (supports quoted commas)
+// =============================
+function parseCSV(text) {
+  const rows = [];
+  let row = [];
+  let value = "";
+  let insideQuotes = false;
+
+  for (let i = 0; i < text.length; i++) {
+    const char = text[i];
+    const next = text[i + 1];
+
+    if (char === '"' && next === '"') {
+      value += '"';
+      i++;
+    } else if (char === '"') {
+      insideQuotes = !insideQuotes;
+    } else if (char === ',' && !insideQuotes) {
+      row.push(value);
+      value = "";
+    } else if ((char === '\n' || char === '\r') && !insideQuotes) {
+      if (value || row.length) {
+        row.push(value);
+        rows.push(row);
+        row = [];
+        value = "";
+      }
+    } else {
+      value += char;
+    }
+  }
+
+  if (value || row.length) {
+    row.push(value);
+    rows.push(row);
+  }
+
+  return rows;
+}
+
+// Extract hyperlink from HYPERLINK("url","text")
+function extractHyperlink(cellValue) {
+  if (!cellValue) return { url: "", text: "" };
+  const match = cellValue.match(/HYPERLINK\("([^"]+)","([^"]+)"\)/i);
+  if (match) {
+    return { url: match[1], text: match[2] };
+  }
+  return { url: "", text: cellValue };
+}
+
+// Convert DD/MM/YYYY to sortable date
+function parseDateToNumber(str) {
+  if (!str) return 0;
+  const parts = str.split(/[\/\-.]/);
+  if (parts.length < 3) return 0;
+  return new Date(Number(parts[2]), Number(parts[1]) - 1, Number(parts[0])).getTime();
+}
+
+
 async function loadDrive() {
   const params = new URLSearchParams(window.location.search);
   const id = params.get("id");
@@ -47,68 +107,37 @@ async function loadDrive() {
     return;
   }
 
-  // IMPORTANT → CSV EXPORT (supports hyperlinks)
+  // Your working CSV GID
   const sheetURL =
-    "https://docs.google.com/spreadsheets/d/1Ar9-a9u4b622-6i8b889qGqENI8rl8Q2U6PPOPBaLDc/export?format=csv&gid=0";
-
-  // Parse HYPERLINK("url","text") formula
-  function extractHyperlink(value) {
-    if (!value) return { url: "", text: "" };
-
-    const match = value.match(/HYPERLINK\("([^"]*)","([^"]*)"\)/i);
-    if (match) {
-      return { url: match[1], text: match[2] };
-    }
-    return { url: "", text: value }; // plain text
-  }
-
-  // Convert DD/MM/YYYY or similar to sortable date value
-  function parseDateToNumber(str) {
-    if (!str) return 0;
-    const parts = str.split(/[\/\-.]/);
-    if (parts.length < 3) return 0;
-    let d = Number(parts[0]);
-    let m = Number(parts[1]);
-    let y = Number(parts[2]);
-    return new Date(y, m - 1, d).getTime();
-  }
+    "https://docs.google.com/spreadsheets/d/1Ar9-a9u4b622-6i8b889qGqENI8rl8Q2U6PPOPBaLDc/export?format=csv&gid=1491695091";
 
   try {
     const response = await fetch(sheetURL);
     const csvText = await response.text();
-    const lines = csvText.split("\n").map(l => l.trim());
+    const rows = parseCSV(csvText);
 
     let history = [];
 
-    // CSV columns mapping:
-    // C = col 2 (DRIVE1)
-    // D = col 3 (DRIVE2)
-    // E = col 4 (DATE with hyperlink)
-    // F = col 5 JOB
-    // G = col 6 TYPE1
-    // H = col 7 TYPE2
-    // J = col 9 WHO
-    // K = col 10 DATE2
+    // Row 0 = headers → start from row 1
+    for (let i = 1; i < rows.length; i++) {
+      const r = rows[i];
 
-    for (let i = 1; i < lines.length; i++) {
-      const row = lines[i].split(",");
-
-      const C = row[2] || "";
-      const D = row[3] || "";
+      const C = r[2] || "";  // DRIVE1
+      const D = r[3] || "";  // DRIVE2
       const UID = `${C}-${D}`;
 
       if (UID === id) {
-        const rawDate = row[4] || "";
+        const rawDate = r[4] || "";
         const { url: dateURL, text: dateText } = extractHyperlink(rawDate);
 
         history.push({
           DATE: dateText,
           DATE_URL: dateURL,
-          JOB: row[5] || "",
-          TYPE1: row[6] || "",
-          TYPE2: row[7] || "",
-          WHO: row[9] || "",
-          DATE2: row[10] || "",
+          JOB: r[5] || "",
+          TYPE1: r[6] || "",
+          TYPE2: r[7] || "",
+          WHO: r[9] || "",
+          DATE2: r[10] || "",
           _sortDate: parseDateToNumber(dateText)
         });
       }
@@ -119,10 +148,10 @@ async function loadDrive() {
       return;
     }
 
-    // Sort latest → oldest
+    // Sort newest → oldest
     history.sort((a, b) => b._sortDate - a._sortDate);
 
-    // Build table
+    // Build output table
     let table = `
       <div class="card">
         <h3>${id}</h3>
@@ -142,8 +171,8 @@ async function loadDrive() {
         <tr>
           <td>${
             item.DATE_URL
-            ? `<a href="${item.DATE_URL}" target="_blank">${item.DATE}</a>`
-            : item.DATE
+              ? `<a href="${item.DATE_URL}" target="_blank">${item.DATE}</a>`
+              : item.DATE
           }</td>
           <td>${item.JOB}</td>
           <td>${item.TYPE1}</td>
@@ -157,8 +186,8 @@ async function loadDrive() {
     table += "</table></div>";
     document.getElementById("drive").innerHTML = table;
 
-  } catch (err) {
-    console.error(err);
+  } catch (error) {
+    console.error(error);
     document.getElementById("drive").innerHTML = "Error loading data.";
   }
 }
