Add hyperlink extraction for document links

--- a/index.html
+++ b/index.html
@@ -1,42 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Drive Details</title>
-<style>
-body {
-  font-family: Arial, sans-serif;
-  padding: 20px;
-  background: #f2f6ff;
-}
-h2 {
-  color: #003f88;
-}
-.card {
-  padding: 15px;
-  background: white;
-  border-radius: 8px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-  margin-top: 15px;
-}
-table {
-  width: 100%;
-  border-collapse: collapse;
-}
-th, td {
-  padding: 8px;
-  border: 1px solid #ccc;
-}
-th {
-  background: #dce6f6;
-}
-</style>
-</head>
-<body>
-
-<h2>Drive Information</h2>
-<div id="drive">Loading data...</div>
-
 <script>
 async function loadDrive() {
   const params = new URLSearchParams(window.location.search);
@@ -50,20 +11,16 @@ async function loadDrive() {
   const sheetURL =
     "https://docs.google.com/spreadsheets/d/1Ar9-a9u4b622-6i8b889qGqENI8rl8Q2U6PPOPBaLDc/gviz/tq?tqx=out:json";
 
-  // Convert date string into sortable number
   function sortKey(dateText) {
     if (!dateText) return 0;
-
     let str = dateText.toString().trim();
     const parts = str.split(/[\/\-.]/);
-
     if (parts.length >= 3) {
       let d = Number(parts[0]);
       let m = Number(parts[1]);
       let y = Number(parts[2]);
       return new Date(y, m - 1, d).getTime();
     }
-
     let t = Date.parse(str);
     return isNaN(t) ? 0 : t;
   }
@@ -78,12 +35,15 @@ async function loadDrive() {
     let history = [];
 
     rows.forEach(r => {
-      const C = r.c[2]?.v || "";  
-      const D = r.c[3]?.v || "";  
+      const C = r.c[2]?.v || "";
+      const D = r.c[3]?.v || "";
       const UID = `${C}-${D}`;
 
       if (UID === id) {
         const DATE = r.c[4]?.f || r.c[4]?.v || "";
+
+        // 🔥 Extract hyperlink URL from Column K (index 10)
+        const LINK = r.c[10]?.p?.link || "";  // This is the FIX
 
         history.push({
           DATE,
@@ -92,6 +52,7 @@ async function loadDrive() {
           TYPE2: r.c[7]?.v || "",
           WHO: r.c[9]?.v || "",
           DATE2: r.c[10]?.f || r.c[10]?.v || "",
+          LINK,
           SORT: sortKey(DATE)
         });
       }
@@ -102,7 +63,6 @@ async function loadDrive() {
       return;
     }
 
-    // 🔥 SORT latest → oldest
     history.sort((a, b) => b.SORT - a.SORT);
 
     let table = `
@@ -116,6 +76,7 @@ async function loadDrive() {
             <th>Type2</th>
             <th>Who</th>
             <th>Date2</th>
+            <th>Document</th>
           </tr>
     `;
 
@@ -128,6 +89,7 @@ async function loadDrive() {
           <td>${item.TYPE2}</td>
           <td>${item.WHO}</td>
           <td>${item.DATE2}</td>
+          <td>${item.LINK ? `<a href="${item.LINK}" target="_blank">Open File</a>` : ""}</td>
         </tr>
       `;
     });
@@ -142,6 +104,3 @@ async function loadDrive() {
 
 loadDrive();
 </script>
-
-</body>
-</html>
