--- a/index.html
+++ b/index.html
@@ -1,3 +1,53 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Drive Details</title>
+<style>
+body {
+  font-family: Arial, sans-serif;
+  padding: 20px;
+  background: #f2f6ff;
+}
+h2 {
+  color: #003f88;
+  margin-bottom: 10px;
+}
+.card {
+  padding: 15px;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+  margin-top: 20px;
+}
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 10px;
+}
+th, td {
+  padding: 10px;
+  border: 1px solid #d1d9e6;
+  text-align: left;
+}
+th {
+  background: #dce6f6;
+  font-weight: bold;
+}
+a {
+  color: #0057d9;
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
+</style>
+</head>
+<body>
+
+<h2>Drive Information</h2>
+<div id="drive">Loading data...</div>
+
 <script>
 async function loadDrive() {
   const params = new URLSearchParams(window.location.search);
@@ -11,16 +61,19 @@ async function loadDrive() {
   const sheetURL =
     "https://docs.google.com/spreadsheets/d/1Ar9-a9u4b622-6i8b889qGqENI8rl8Q2U6PPOPBaLDc/gviz/tq?tqx=out:json";
 
+  // Convert date text into sortable numeric value
   function sortKey(dateText) {
     if (!dateText) return 0;
     let str = dateText.toString().trim();
     const parts = str.split(/[\/\-.]/);
+
     if (parts.length >= 3) {
       let d = Number(parts[0]);
       let m = Number(parts[1]);
       let y = Number(parts[2]);
       return new Date(y, m - 1, d).getTime();
     }
+
     let t = Date.parse(str);
     return isNaN(t) ? 0 : t;
   }
@@ -35,15 +88,16 @@ async function loadDrive() {
     let history = [];
 
     rows.forEach(r => {
-      const C = r.c[2]?.v || "";
-      const D = r.c[3]?.v || "";
+      const C = r.c[2]?.v || "";  // Column C
+      const D = r.c[3]?.v || "";  // Column D
+
       const UID = `${C}-${D}`;
 
       if (UID === id) {
         const DATE = r.c[4]?.f || r.c[4]?.v || "";
 
-        // 🔥 Extract hyperlink URL from Column K (index 10)
-        const LINK = r.c[10]?.p?.link || "";  // This is the FIX
+        // Column K hyperlink directly contains full URL text
+        const LINK = r.c[10]?.v || "";
 
         history.push({
           DATE,
@@ -72,10 +126,10 @@ async function loadDrive() {
           <tr>
             <th>Date</th>
             <th>Job</th>
-            <th>Type1</th>
-            <th>Type2</th>
+            <th>Type 1</th>
+            <th>Type 2</th>
             <th>Who</th>
-            <th>Date2</th>
+            <th>Date 2</th>
             <th>Document</th>
           </tr>
     `;
@@ -98,9 +152,13 @@ async function loadDrive() {
     document.getElementById("drive").innerHTML = table;
 
   } catch (err) {
+    console.log(err);
     document.getElementById("drive").innerHTML = "Error loading data.";
   }
 }
 
 loadDrive();
 </script>
+
+</body>
+</html>
