--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@ async function loadDrive() {
   const sheetURL =
     "https://docs.google.com/spreadsheets/d/1Ar9-a9u4b622-6i8b889qGqENI8rl8Q2U6PPOPBaLDc/gviz/tq?tqx=out:json";
 
-  // Convert date text into sortable numeric value
+  // Convert date string into sortable number
   function sortKey(dateText) {
     if (!dateText) return 0;
+
     let str = dateText.toString().trim();
     const parts = str.split(/[\/\-.]/);
 
@@ -88,16 +89,19 @@ async function loadDrive() {
     let history = [];
 
     rows.forEach(r => {
-      const C = r.c[2]?.v || "";  // Column C
-      const D = r.c[3]?.v || "";  // Column D
+      const C = r.c[2]?.v || "";  
+      const D = r.c[3]?.v || "";  
 
       const UID = `${C}-${D}`;
 
       if (UID === id) {
         const DATE = r.c[4]?.f || r.c[4]?.v || "";
 
-        // Column K hyperlink directly contains full URL text
-        const LINK = r.c[10]?.v || "";
+        // 🔥 Extract hyperlink URL from Column E (index 4)
+        const LINK =
+          r.c[4]?.p?.link || 
+          r.c[4]?.p?.links?.[0]?.link ||
+          "";
 
         history.push({
           DATE,
@@ -117,6 +121,7 @@ async function loadDrive() {
       return;
     }
 
+    // Sort newest → oldest
     history.sort((a, b) => b.SORT - a.SORT);
 
     let table = `
