--- a/index.html
+++ b/index.html
@@ -1,134 +1,193 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <title>Drive Details</title>
+
 <style>
-body { font-family: Arial, sans-serif; padding: 20px; background: #f2f6ff; }
-h2 { color: #003f88; margin-bottom: 10px; }
-.card { padding: 15px; background: white; border-radius: 10px; box-shadow: 0 2px 8px rgba(0,0,0,0.15); margin-top: 20px; }
-table { width: 100%; border-collapse: collapse; margin-top: 10px; }
-th, td { padding: 10px; border: 1px solid #d1d9e6; text-align: left; }
-th { background: #dce6f6; font-weight: bold; }
-a { color: #0057d9; text-decoration: none; }
-a:hover { text-decoration: underline; }
+    body {
+        font-family: "Segoe UI", Arial, sans-serif;
+        background: #eef3ff;
+        margin: 0;
+        padding: 25px;
+    }
+
+    h2 {
+        color: #003f88;
+        font-size: 26px;
+        margin-bottom: 15px;
+    }
+
+    .card {
+        background: #ffffff;
+        border-radius: 12px;
+        padding: 20px;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+    }
+
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-top: 15px;
+    }
+
+    th, td {
+        padding: 12px 10px;
+        border-bottom: 1px solid #d6dcef;
+        text-align: left;
+        font-size: 15px;
+    }
+
+    th {
+        background: #dce6f8;
+        font-weight: 600;
+    }
+
+    td {
+        background: #ffffff;
+    }
+
+    .btn {
+        display: inline-block;
+        padding: 8px 14px;
+        background: #0057d9;
+        color: white;
+        text-decoration: none;
+        border-radius: 6px;
+        font-size: 14px;
+    }
+
+    .btn:hover {
+        background: #003e9e;
+    }
+
+    @media(max-width: 600px) {
+        table, thead, tbody, th, td, tr {
+            display: block;
+        }
+        th {
+            display: none;
+        }
+        td {
+            border: none;
+            padding: 8px 5px;
+        }
+    }
 </style>
 </head>
 <body>
 
 <h2>Drive Information</h2>
-<div id="drive">Loading data...</div>
+<div id="drive" class="card">Loading data...</div>
 
 <script>
 async function loadDrive() {
-  const params = new URLSearchParams(window.location.search);
-  const id = params.get("id");
+    const params = new URLSearchParams(window.location.search);
+    const id = params.get("id");
 
-  if (!id) {
-    document.getElementById("drive").innerHTML = "No drive ID found in QR code.";
-    return;
-  }
-
-  const sheetURL =
-    "https://docs.google.com/spreadsheets/d/1Ar9-a9u4b622-6i8b889qGqENI8rl8Q2U6PPOPBaLDc/gviz/tq?tqx=out:json";
-
-  function sortKey(dateText) {
-    if (!dateText) return 0;
-    let str = dateText.toString().trim();
-    const parts = str.split(/[\/\-.]/);
-    if (parts.length >= 3) {
-      return new Date(parts[2], parts[1] - 1, parts[0]).getTime();
+    if (!id) {
+        document.getElementById("drive").innerHTML = "No drive ID found in QR code.";
+        return;
     }
-    let t = Date.parse(str);
-    return isNaN(t) ? 0 : t;
-  }
 
-  try {
-    const response = await fetch(sheetURL);
-    const text = await response.text();
-    const json = JSON.parse(text.substr(47).slice(0, -2));
-    const rows = json.table.rows;
+    const sheetURL =
+        "https://docs.google.com/spreadsheets/d/1Ar9-a9u4b622-6i8b889qGqENI8rl8Q2U6PPOPBaLDc/gviz/tq?tqx=out:json";
 
-    let history = [];
-
-    rows.forEach(r => {
-      const C = r.c[2]?.v || "";
-      const D = r.c[3]?.v || "";
-      const UID = `${C}-${D}`;
-
-      if (UID === id) {
-        const DATE = r.c[4]?.f || r.c[4]?.v || "";
-
-        // ⭐ FINAL UNIVERSAL HYPERLINK EXTRACTION
-        let LINK = "";
-
-        if (r.c[4]?.p?.link) {
-          LINK = r.c[4].p.link;
-        } else if (r.c[4]?.p?.links?.[0]?.link) {
-          LINK = r.c[4].p.links[0].link;
-        } else if (r.c[4]?.f && r.c[4].f.includes("HYPERLINK")) {
-          const match = r.c[4].f.match(/HYPERLINK\("([^"]+)"/i);
-          if (match) LINK = match[1];
-        } else if (r.c[4]?.v && r.c[4].v.toString().startsWith("http")) {
-          LINK = r.c[4].v;
+    function sortKey(dateText) {
+        if (!dateText) return 0;
+        let str = dateText.toString().trim();
+        const parts = str.split(/[\/\-.]/);
+        if (parts.length >= 3) {
+            let d = Number(parts[0]);
+            let m = Number(parts[1]);
+            let y = Number(parts[2]);
+            return new Date(y, m - 1, d).getTime();
         }
 
-        history.push({
-          DATE,
-          JOB: r.c[5]?.v || "",
-          TYPE1: r.c[6]?.v || "",
-          TYPE2: r.c[7]?.v || "",
-          WHO: r.c[9]?.v || "",
-          DATE2: r.c[10]?.f || r.c[10]?.v || "",
-          LINK,
-          SORT: sortKey(DATE)
-        });
-      }
-    });
-
-    if (history.length === 0) {
-      document.getElementById("drive").innerHTML = "No history found for this drive.";
-      return;
+        let t = Date.parse(str);
+        return isNaN(t) ? 0 : t;
     }
 
-    history.sort((a, b) => b.SORT - a.SORT);
+    try {
+        const response = await fetch(sheetURL);
+        const text = await response.text();
 
-    let table = `
-      <div class="card">
-        <h3>${id}</h3>
-        <table>
-          <tr>
-            <th>Date</th>
-            <th>Job</th>
-            <th>Type 1</th>
-            <th>Type 2</th>
-            <th>Who</th>
-            <th>Date 2</th>
-            <th>Document</th>
-          </tr>
-    `;
+        const json = JSON.parse(text.substr(47).slice(0, -2));
+        const rows = json.table.rows;
 
-    history.forEach(item => {
-      table += `
-        <tr>
-          <td>${item.DATE}</td>
-          <td>${item.JOB}</td>
-          <td>${item.TYPE1}</td>
-          <td>${item.TYPE2}</td>
-          <td>${item.WHO}</td>
-          <td>${item.DATE2}</td>
-          <td>${item.LINK ? `<a href="${item.LINK}" target="_blank">Open File</a>` : ""}</td>
-        </tr>
-      `;
-    });
+        let history = [];
 
-    table += "</table></div>";
-    document.getElementById("drive").innerHTML = table;
+        rows.forEach(r => {
+            const C = r.c[2]?.v || "";
+            const D = r.c[3]?.v || "";
+            const UID = `${C}-${D}`;
 
-  } catch (err) {
-    console.log(err);
-    document.getElementById("drive").innerHTML = "Error loading data.";
-  }
+            if (UID === id) {
+                const DATE = r.c[4]?.f || r.c[4]?.v || "";
+
+                // Column K – ONLY VALUE. Never show formula.
+                const linkValue = r.c[10]?.v || "";
+
+                history.push({
+                    DATE,
+                    JOB: r.c[5]?.v || "",
+                    TYPE1: r.c[6]?.v || "",
+                    TYPE2: r.c[7]?.v || "",
+                    WHO: r.c[9]?.v || "",
+                    DATE2: r.c[10]?.v || "",  // only plain text
+                    LINK: linkValue,          // raw URL hidden, used only for button
+                    SORT: sortKey(DATE)
+                });
+            }
+        });
+
+        if (history.length === 0) {
+            document.getElementById("drive").innerHTML = "No history found for this drive.";
+            return;
+        }
+
+        history.sort((a, b) => b.SORT - a.SORT);
+
+        let html = `
+            <table>
+                <tr>
+                    <th>Date</th>
+                    <th>Job</th>
+                    <th>Type 1</th>
+                    <th>Type 2</th>
+                    <th>Who</th>
+                    <th>Date 2</th>
+                    <th>Document</th>
+                </tr>
+        `;
+
+        history.forEach(item => {
+            html += `
+                <tr>
+                    <td>${item.DATE}</td>
+                    <td>${item.JOB}</td>
+                    <td>${item.TYPE1}</td>
+                    <td>${item.TYPE2}</td>
+                    <td>${item.WHO}</td>
+                    <td>${item.DATE2}</td>
+                    <td>
+                        ${
+                            item.LINK
+                                ? `<a class="btn" href="${item.LINK}" target="_blank">Open File</a>`
+                                : `<span style="color:#888">No File</span>`
+                        }
+                    </td>
+                </tr>
+            `;
+        });
+
+        html += "</table>";
+        document.getElementById("drive").innerHTML = html;
+
+    } catch (err) {
+        console.log(err);
+        document.getElementById("drive").innerHTML = "Error loading data.";
+    }
 }
 
 loadDrive();
